// Vitest Snapshot v1

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://www.linkedin.com/in/witoldmetel/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Witold Metel
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://www.linkedin.com/in/witoldmetel/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Witold Metel
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://www.linkedin.com/in/witoldmetel/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Witold Metel
</a>
`;
